--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "express": "^4.0.0",
     "mongodb": ">1.3.0",
     "morgan": "~1.0.0",
+    "cors": "^2.2.0",
     "serve-static": "1.0.2",
     "static-favicon": "~1.0.0"
   }
