--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Zza-Node-Mongo-Server",
+  "name": "Zza-BMEAN-AppServer",
   "description": "A demonstration of Breeze, MongoDb, Express, Angular, and Node.js (BMEAN)",
-  "version": "0.6.0",
+  "version": "0.8.0",
   "private": true,
+  "main": "./server/app-server.js",
   "dependencies": {
     "body-parser": "~1.0.0",
     "breeze-mongodb": "^0.0.6",
@@ -14,5 +15,18 @@
     "cors": "^2.2.0",
     "serve-static": "1.0.2",
     "static-favicon": "~1.0.0"
+  },
+  "keywords": [
+      "breezejs",
+      "angularjs",
+      "mean",
+      "demo",
+      "animation",
+      "orm"
+  ],
+  "author": "Ward Bell, Thomas Burleson",
+  "engines": {
+      "node": "0.10.x"
   }
+
 }
